; ModuleID = '/home/carl/AnghaBench/sqlcipher/mptest/extr_mptest.c_evalFunc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/mptest/extr_mptest.c_evalFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@evalCallback = common dso_local global i32 0, align 4
@SQLITE_TRANSIENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @evalFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evalFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_5__, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @sqlite3_context_db_handle(i32* %12)
  store i32* %13, i32** %7, align 8
  %14 = load i32**, i32*** %6, align 8
  %15 = getelementptr inbounds i32*, i32** %14, i64 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i64 @sqlite3_value_text(i32* %16)
  %18 = inttoptr i64 %17 to i8*
  store i8* %18, i8** %8, align 8
  store i8* null, i8** %10, align 8
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @UNUSED_PARAMETER(i32 %19)
  %21 = call i32 @memset(%struct.TYPE_5__* %9, i32 0, i32 4)
  %22 = load i32*, i32** %7, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = load i32, i32* @evalCallback, align 4
  %25 = call i32 @sqlite3_exec(i32* %22, i8* %23, i32 %24, %struct.TYPE_5__* %9, i8** %10)
  store i32 %25, i32* %11, align 4
  %26 = load i8*, i8** %10, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %34

28:                                               ; preds = %3
  %29 = load i32*, i32** %4, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = call i32 @sqlite3_result_error(i32* %29, i8* %30, i32 -1)
  %32 = load i8*, i8** %10, align 8
  %33 = call i32 @sqlite3_free(i8* %32)
  br label %48

34:                                               ; preds = %3
  %35 = load i32, i32* %11, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %34
  %38 = load i32*, i32** %4, align 8
  %39 = load i32, i32* %11, align 4
  %40 = call i32 @sqlite3_result_error_code(i32* %38, i32 %39)
  br label %47

41:                                               ; preds = %34
  %42 = load i32*, i32** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = load i32, i32* @SQLITE_TRANSIENT, align 4
  %46 = call i32 @sqlite3_result_text(i32* %42, i32 %44, i32 -1, i32 %45)
  br label %47

47:                                               ; preds = %41, %37
  br label %48

48:                                               ; preds = %47, %28
  %49 = call i32 @stringFree(%struct.TYPE_5__* %9)
  ret void
}

declare dso_local i32* @sqlite3_context_db_handle(i32*) #1

declare dso_local i64 @sqlite3_value_text(i32*) #1

declare dso_local i32 @UNUSED_PARAMETER(i32) #1

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @sqlite3_exec(i32*, i8*, i32, %struct.TYPE_5__*, i8**) #1

declare dso_local i32 @sqlite3_result_error(i32*, i8*, i32) #1

declare dso_local i32 @sqlite3_free(i8*) #1

declare dso_local i32 @sqlite3_result_error_code(i32*, i32) #1

declare dso_local i32 @sqlite3_result_text(i32*, i32, i32, i32) #1

declare dso_local i32 @stringFree(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
